--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-/* style sheet for "Novay Technologies" © 2017, author: "Daniel J Dunevant , Jesse Primiani" */
+/* style sheet for "Novay Technologies" © 2017, authors: "Daniel J Dunevant , Jesse Primiani" */
+
 /*Header things*/
 .Header
 {
