--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-/* CSS style sheet for "Novay Technologies" © 2017, authors: "Daniel Dunevant & Jesse Primiani" */
-.Header
+der
 {
 	background-color: #696A84;
 	clear: none;
@@ -226,7 +225,11 @@ p
 /*Image Things*/
 #logoLarge
 {
-	margin: auto;
+	margin-right: auto;
+	margin-left: auto;
+	margin-top: 1em;
+	margin-bottom: 1em;
+	height: 25em;
 }
 /*Display as X things*/
 .column
