--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-der
+/* CSS style sheet for "Novay Technologies" © 2017, authors: "Daniel Dunevant & Jesse Primiani" */
+.Header
 {
 	background-color: #696A84;
 	clear: none;
