--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,11 @@
 	height: auto;
 	background: #CED2D7;
 }
+#headerOptionsInner
+{
+	display: inline-block;
+	float:	center;
+}
 .link-boxes
 {
 	border-style: solid;
